--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -79,7 +79,7 @@
   }
 
   &__icon-box {
-      position: relative;
+    position: relative;
   }
 
   &__icon {
@@ -90,7 +90,7 @@
 
   &__notification {
     background-color: var(--color-primary);
-    font-size: .8rem;
+    font-size: 0.8rem;
     width: 1.75rem;
     height: 1.75rem;
     border-radius: 50%;
@@ -111,3 +111,70 @@
   }
 }
 
+////////////////////////////////////////
+// SIDE NAVIGATION
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
+
+  &__item {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  &__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 3px;
+    height: 100%;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+      background-color 0.1s;
+  }
+
+  &__item:hover::before,
+  &__item--active:before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__link:link,
+  &__link:visited {
+    text-decoration: none;
+    color: var(--color-grey-light-1);
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+    position: relative; /* position set for z-index*/
+    z-index: 10; /*z-index set for menu item selection appear behind the text and icon */
+    display: flex;
+    align-items: center;
+  }
+
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor;
+  }
+}
+
+////////////////////////////////////////
+// Legal Text
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem;
+}
