--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -14,8 +14,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-
 }
 
 .content {
@@ -26,9 +24,16 @@
   background-color: var(--color-grey-dark-1);
 
   flex: 0 0 18%; // flex-grow = 0 , flex-shrink = 0 , flex-basis = 18%
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: #fff;
   flex: 1;
+
+  //TEST
+  min-height: 75vh;
 }
