--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,6 +18,12 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest: 75em; // 1200(px) / 16(em)
+$bp-large: 68.75em; // 1100(px)  / 16(em)
+$bp-medium: 56.25em; // 900(px)  / 16(em)
+$bp-small: 37.5em; // 600(px)  / 16(em)
+$bp-smallest: 31.25em; // 500(px)  / 16(em)
+
 * {
   margin: 0;
   padding: 0;
@@ -31,7 +37,11 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+  font-size: 62.5%; // font-size = 10px; 1rem = 10px, 10px/16px = 62.5% or 10px is 0.625em
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%; //  font-size = 8px; 50% of 1em [1em = 16px]
+  }
 }
 
 body {
